<resources>
    <string name="app_name">Поздравька</string>
    <string name="nav_menu_item_listBirthday">Список праздников</string>
    <string name="nav_menu_item_settings">Настройки</string>
    <string name="nav_menu_item_add_celebration">Добавить праздник</string>
    <string name="nav_home_screen">Главная</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="comment">Комментарий</string>
    <string name="anniversary">Годовщина свадьбы</string>
    <string name="birthday">День Рождение</string>
    <string name="other">Свой тип торжества</string>
    <string name="day">Дней</string>
    <string name="year_celebration">Исполняеться </string>
    <string name="year">Год</string>
    <string name="search">Поиск</string>
    <string name="done">Готово</string>
    <string name="no_nearest_celebrations">Нет ближайших торжеств</string>
    <string name="no_celebration">Нет торжеств</string>
    <string name="date_out_of_range">Дата должна быть в прошлом</string>
    <string name="nearest_celebration">Ближайшее праздники</string>

    <string name="day_1">1 День</string>
    <string name="day_2">2 Дня</string>
    <string name="day_7">7 Деней</string>
    <string name="time_alarm">Примерное время оповещения</string>


    <string name="left_1_day">Остался </string>
    <string name="left_number_days">Осталось </string>


    <string name="days_0">Сегодня</string>
    <string name="days_1"> день</string>
    <string name="days_2_3_4_44"> дня</string>
    <string name="days"> дней</string>

    <string name="time">Время</string>
    <string name="notify">Оповестить за</string>


    <string name="will_be">Будет</string>
    <string name="year_1">Год</string>
    <string name="year_2_3_4_44">Года</string>
    <string name="years_other">Лет</string>


    <string name="string_overflow">Лимит символов превышен</string>
    <string name="strng_empty">Обязательная строка</string>
    <string name="date_empty">Установите дату</string>

    <string-array name="spin_type_celebr">
        <item>@string/birthday</item>
        <item>@string/anniversary</item>
        <item>@string/other</item>
    </string-array>
</resources>
